--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>brndnknn.github.io</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <main>
 
-
-<a href="./tOPprojects/toDoList/dist/index.html">to do list</a>
+        </main>
+    </body>
+</html>
