--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     </head>
     <body>
         <main>
+            <h1>Hello World!</h1>
+            <p>My name is Brandon.<br>
+                This will my codding portfolio, it's under construction!<br>
+                For now you can check out my <a href="github.com/brndnknn">github</a> </p>
+
 
         </main>
     </body>
