added blueprint styles

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <main>
             <h1>Hello World!</h1>
-            <p>My name is Brandon.<br>
-                This will my codding portfolio, it's under construction!<br>
-                For now you can check out my <a href="github.com/brndnknn">github</a> </p>
+            <div id="message">My name is Brandon.<br>
+                This will be my codding portfolio<br> it's under construction!<br>
+                For now you can check out my <a href="github.com/brndnknn">github</a> </div>
 
 
         </main>
