Update index.html to fix bad link

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>Hello World!</h1>
             <div id="message">My name is Brandon.<br>
                 This will be my codding portfolio<br> it's under construction!<br>
-                For now you can check out my <a href="github.com/brndnknn">github</a> </div>
+                For now you can check out my <a href="www.github.com/brndnknn">github</a> </div>
 
 
         </main>
